--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,9 @@
 HOST=localhost
-USER=iklp4419_admin
-PASS=d7cbngYkAa8X
-DATABASE=iklp4419_kcm_db
+DB_NAME=iklp4419_kcm_db
+DB_USER=iklp4419_admin
+DB_PASS=d7cbngYkAa8X
+JWT_SECRET=rahasia_super_aman
+JWT_EXPIRES_IN=1h
+
 REACT_APP_SERVER = "https://api3.app.iklin.online/"
+
