--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Build frontend
+        working-directory: ./frontend
         run: |
           npm install
           npm run build
