--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy Frontend via FTPS
+name: Deploy Frontend via FTP
 
 on:
   push:
@@ -8,6 +8,7 @@ on:
 jobs:
   deploy-frontend:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -22,12 +23,11 @@ jobs:
           npm install
           npm run build
 
-      - name: Upload build via FTPS
+      - name: Upload via FTP
         uses: SamKirkland/FTP-Deploy-Action@v4.3.4
         with:
           server: ${{ secrets.FTP_HOST }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
-          protocol: ftps
-          server-dir: /frontend_build/
-          local-dir: ./dist/
+          server-dir: /frontend_build
+          local-dir: ./dist
